--- a/Contents/default.css
+++ b/Contents/default.css
@@ -14,6 +14,15 @@ body {
 	border-left: 0px;
 	padding: 4px 442px 2px 15px;	
 }
+
+/*Log out button*/
+#logoutbutton{
+	position: absolute;
+	height: 35px;
+	width: 35px;
+	left: 1103px;
+	top: 10px;
+}
 /*Music header menu logo*/
 #toolbarmusic{
 	position: absolute;
