--- a/Contents/default.css
+++ b/Contents/default.css
@@ -392,3 +392,12 @@ tr.selected {
 
 }
 
+#morebutton{
+	position: absolute;
+	left: 250px;
+}
+#morebutton:hover{
+	border-style: solid;
+	border-width: 1px;
+	border-color: #7c7c7c;	
+}
