--- a/Contents/default.css
+++ b/Contents/default.css
@@ -452,23 +452,34 @@ tr.selected {
 
 div.bigcard_ListenNow{
 	position: relative;
-	left: 220px; 
-	top:180px;
-	width: 322px;
-	height: 386px;
+	width: 362px;
+	height: 500px;
+	overflow: hidden;
 }
 div.bigcard_image:hover{
 	opacity: 0.5;
 }
 
-#littleimage_ListenNow{
+div.littlecard_ListenNow{
 	position: relative;
-	top: -175px;
-	left: 370px;
-	float: right;
+	float: left;
+	bottom: 500px;
+	left: 391px;
+	width: 161px;
+        height: 193px;
+	vertical-align: top;
+	-moz-border-radius: 30px;
+	-webkit-border-radius: 30px;
+	padding-right: 31px;
 }
 
-#littleimage_ListenNow:hover{
+div.littlecard_image{
+	width: 161px;
+	height: 161px;
+	overflow: hidden;
+}
+
+div.littlecard_image:hover{
 	 opacity: 0.5;
 }
 
@@ -485,6 +496,20 @@ p.footerimage_ListenNow{
 	color: #a6a6a6;
 }
 
+a#little.footerimage_ListenNow{
+        color: black;
+        font-size: 12px;
+        text-decoration: none;
+}
+a#little.footerimage_ListenNow:hover{
+        text-decoration: underline;
+}
+
+p#little.footerimage_ListenNow{
+	font-size: 12px;
+        color: #a6a6a6;
+}
+
 .footerimage_ListenNow{
 	font-family: 'Lato', sans-serif;
 	line-height: 80%;
@@ -492,8 +517,25 @@ p.footerimage_ListenNow{
 
 div.imagedetails_ListenNow{
 	height: 60px;
-	width: 322px;
+	width: 362px;
 	background-color: #f6f6f6;
 }
 div.imagedetails_ListenNow:hover{
+}
+
+div#little.imagedetails_ListenNow{
+        height: 50px;
+        width: 161px;
+        background-color: #f6f6f6;
+}
+
+
+
+div.g-Content{
+	position: absolute;
+	top: 190px; 
+	left: 215px;
+	width: 938px;
+	height: 400px;
+	
 }
